--- a/app/views/disturbances/_disturbance.html.erb
+++ b/app/views/disturbances/_disturbance.html.erb
@@ -31,10 +31,11 @@
   </p>
 
   <p>
-    <strong>Enregistré le:</strong>
+    <strong>Enregistrée le:</strong>
     <%= l disturbance.created_at %>
     (<%= time_tag disturbance.created_at, "data-local": "time-ago" %>)
   </p>
+
   <hr>
 
 </div>
