Afficher la source

--- a/app/views/disturbances/index.html.erb
+++ b/app/views/disturbances/index.html.erb
@@ -7,3 +7,8 @@
     <%= render disturbance %>
   <% end %>
 </div>
+
+<h6>
+  Source :
+  <%= link_to 'm.ter.sncf.com', 'https://m.ter.sncf.com/grand-est/se-deplacer/prochains-departs/strasbourg-roethig-87212191' %>
+</h6>
