--- a/app/views/disturbances/index.html.erb
+++ b/app/views/disturbances/index.html.erb
@@ -10,5 +10,8 @@
 
 <h6>
   Source :
-  <%= link_to 'm.ter.sncf.com', 'https://m.ter.sncf.com/grand-est/se-deplacer/prochains-departs/strasbourg-roethig-87212191' %>
+  <%= link_to 'm.ter.sncf.com', 
+              'https://m.ter.sncf.com/grand-est/se-deplacer/prochains-departs/strasbourg-87212027',
+              target: '_blank'
+  %>
 </h6>
