--- a/app/views/disturbances/index.html.erb
+++ b/app/views/disturbances/index.html.erb
@@ -15,3 +15,9 @@
               target: '_blank'
   %>
 </h6>
+
+<script type="text/javascript">    
+  setInterval(function() {
+    window.location.reload();
+  }, 5 * 60000); 
+</script>
