--- a/app/views/disturbances/index.html.erb
+++ b/app/views/disturbances/index.html.erb
@@ -11,11 +11,13 @@
 <%= paginate @disturbances %>
 
 <h6>
+  <%= link_to 'Export XLS', url_for(params.permit!.merge(format: :xls)) %> 
+  |
   Source :
   <%= link_to 'm.ter.sncf.com', 
               'https://m.ter.sncf.com/grand-est/se-deplacer/prochains-departs/strasbourg-87212027',
-              target: '_blank'
-  %>
+              target: '_blank' %>
+
 </h6>
 
 <script type="text/javascript">    
