--- a/app/views/disturbances/_disturbance.html.erb
+++ b/app/views/disturbances/_disturbance.html.erb
@@ -45,9 +45,8 @@
   </p>
 
   <p>
-    <strong>Enregistrée le:</strong>
-    <%= l disturbance.created_at %>
-    (<%= time_tag disturbance.created_at, "data-local": "time-ago" %>)
+    <strong>Enregistrée :</strong>
+    <%= time_tag disturbance.created_at, "data-local": "time-ago" %>
   </p>
 
   <hr>
