--- a/app/views/disturbances/_disturbance.html.erb
+++ b/app/views/disturbances/_disturbance.html.erb
@@ -67,7 +67,7 @@
     <%= disturbance.information %>
   </p>
 
-  <% if disturbance.information_payload %>
+  <% if disturbance.information_payload && params[:action] == 'show' %>
     <small>
       <pre>
         <%= JSON.pretty_generate(disturbance.information_payload) %>
@@ -79,6 +79,10 @@
     <strong>Enregistrée :</strong>
     <%= time_tag disturbance.created_at, "data-local": "time-ago" %>
   </p>
+
+  <% unless  params[:action] == 'show' %>
+    <%= link_to 'Voir les détails', disturbance_path(disturbance) %>
+  <% end %>
 
   <hr>
 
