--- a/app/views/disturbances/edit.html.erb
+++ b/app/views/disturbances/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Editing disturbance</h1>
+<h1>Editer perturbation</h1>
 
 <%= render "form", disturbance: @disturbance %>
 
 <br>
 
 <div>
-  <%= link_to "Show this disturbance", @disturbance %> |
-  <%= link_to "Back to disturbances", disturbances_path %>
+  <%= link_to "Voir cette perturbation", @disturbance %> |
+  <%= link_to "Retour aux perturbations", disturbances_path %>
 </div>
