--- a/app/views/disturbances/_disturbance.html.erb
+++ b/app/views/disturbances/_disturbance.html.erb
@@ -1,89 +1,103 @@
-<div id="<%= dom_id disturbance %>">
+<tr>
+  <div id="<%= dom_id disturbance %>">
+    <td>
+      <p>
+        <%= disturbance.id %>
+      </p>
+    </td>
 
-  <p>
-    <strong>#</strong>
-    <%= disturbance.id %>
-  </p>
+    <td>
+      <p>
+        <%= disturbance.origine %>
+        <small>
+          <%= "(#{ disturbance.gare_id })" if disturbance.gare_id %>
+        </small>
+      </p>
+    </td>
 
-  <p>
-    <strong>Gare:</strong>
-    <%= disturbance.origine %>
-    <small>
-      <%= "(#{ disturbance.gare_id })" if disturbance.gare_id %>
-    </small>
-  </p>
+    <td>
+      <p>
+        <%= disturbance.train %>
+      </p>
+    </td>
 
-  <p>
-    <strong>Train:</strong>
-    <%= disturbance.train %>
-  </p>
+      <% if disturbance.sens == 'Départ' %>
+        <td>
+          <p>
+            <%= disturbance.destination %>
+          </p>
+        </td>
 
-  <% if disturbance.sens == 'Départ' %>
-    <p>
-      <strong>Destination:</strong>
-      <%= disturbance.destination %>
-    </p>
+        <td>
+          <p>
+            <%= disturbance.départ_prévu %>
+          </p>
+        </td>
 
-    <p>
-      <strong>Départ prévu:</strong>
-      <%= disturbance.départ_prévu %>
-    </p>
+        <td>
+          <p>
+            <%= disturbance.départ_réel %>
+          </p>
+        </td>
+      <% else %>
+        <td>
+          <p>
+            <%= disturbance.provenance %>
+          </p>
+        </td>
 
-    <p>
-      <strong>Départ réel:</strong>
-      <%= disturbance.départ_réel %>
-    </p>
-  <% else %>
-    <p>
-      <strong>Provenance:</strong>
-      <%= disturbance.provenance %>
-    </p>
+        <td>
+          <p>
+            <%= disturbance.arrivée_prévue %>
+          </p>
+        </td>
 
-    <p>
-      <strong>Arrivée prévue:</strong>
-      <%= disturbance.arrivée_prévue %>
-    </p>
+        <td>
+          <p>
+            <%= disturbance.arrivée_réelle %>
+          </p>
+        </td>
+      <% end %>
 
-    <p>
-      <strong>Arrivée réelle:</strong>
-      <%= disturbance.arrivée_réelle %>
-    </p>
-  <% end %>
+      <td>
+        <p>
+          <%= disturbance.voie %>
+        </p>
+      </td>
 
-  <p>
-    <strong>Voie:</strong>
-    <%= disturbance.voie %>
-  </p>
+      <td>
+        <p>
+          <span style="<%= disturbance.raison.include?('Supprimé') ? 'color: red;' : (disturbance.raison.include?('Retard') ? 'color: orange;'  : '')  %>">
+            <%= disturbance.raison %>
+          </span>
+        </p>
+      </td>
 
-  <p>
-    <strong>Raison:</strong>
-    <span style="<%= disturbance.raison.include?('Supprimé') ? 'color: red;' : (disturbance.raison.include?('Retard') ? 'color: orange;'  : '')  %>">
-      <%= disturbance.raison %>
-    </span>
-  </p>
+      <td>
+        <p>
+          <%= disturbance.information %>
+        </p>
+      </td>
 
-  <p>
-    <strong>Information:</strong>
-    <%= disturbance.information %>
-  </p>
+      <% if disturbance.information_payload && params[:action] == 'show' %>
+        <small>
+          <pre>
+            <%= JSON.pretty_generate(disturbance.information_payload) %>
+          </pre>
+        </small>
+      <% end %>
 
-  <% if disturbance.information_payload && params[:action] == 'show' %>
-    <small>
-      <pre>
-        <%= JSON.pretty_generate(disturbance.information_payload) %>
-      </pre>
-    </small>
-  <% end %>
+      <td>
+        <p>
+          <%= time_tag disturbance.created_at, "data-local": "time-ago" %>
+        </p>
+      </td>
 
-  <p>
-    <strong>Enregistrée :</strong>
-    <%= time_tag disturbance.created_at, "data-local": "time-ago" %>
-  </p>
-
-  <% unless  params[:action] == 'show' %>
-    <%= link_to 'Voir les détails', disturbance_path(disturbance) %>
-  <% end %>
-
-  <hr>
-
-</div>
+      <td>
+        <% unless  params[:action] == 'show' %>
+          <%= link_to 'Voir', disturbance_path(disturbance) %>
+        <% end %>
+      </td>
+    </td>
+  </div>
+</tr>
