--- a/app/views/disturbances/index.html.erb
+++ b/app/views/disturbances/index.html.erb
@@ -1,26 +1,42 @@
-<p style="color: green"><%= notice %></p>
+<div class="m-8">
+  <h1>Perturbations</h1>
+  <div id="disturbances" class="mb-4">
+    <table class="border-collapse border border-slate-500">
+      <thead>
+        <tr>
+          <th>Id</th>
+          <th>Gare</th>
+          <th>Train</th>
+          <th>Destination/ Provenance</th>
+          <th>Départ/Arrivée prévu.e</th>
+          <th>Départ/Arrivée réel.le</th>
+          <th>Voie</th>
+          <th>Raison</th>
+          <th>Information</th>
+          <th>Enregistrée</th>
+          <th colspan=1></th>
+        </tr>
+      </thead>
+      <tbody>
+        <%= render @disturbances %>
+      </tbody>
+    </table>
+  </div>
 
-<h1>Perturbations</h1>
+  <%= paginate @disturbances %>
 
-<div id="disturbances">
-  <% @disturbances.each do |disturbance| %>
-    <%= render disturbance %>
-  <% end %>
+  <p>
+    <%= link_to 'Export XLS', url_for(params.permit!.merge(format: :xls)) %>
+    |
+    Source :
+    <%= link_to 'm.ter.sncf.com',
+                'https://m.ter.sncf.com/grand-est/se-deplacer/prochains-departs/strasbourg-87212027',
+                target: '_blank' %>
+
+  </p>
 </div>
 
-<%= paginate @disturbances %>
-
-<h6>
-  <%= link_to 'Export XLS', url_for(params.permit!.merge(format: :xls)) %> 
-  |
-  Source :
-  <%= link_to 'm.ter.sncf.com', 
-              'https://m.ter.sncf.com/grand-est/se-deplacer/prochains-departs/strasbourg-87212027',
-              target: '_blank' %>
-
-</h6>
-
-<script type="text/javascript">    
+<script type="text/javascript">
   setInterval(function() {
     window.location.reload();
   }, 5 * 60000); 
