--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <title>Disturbances</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -34,10 +34,10 @@
       </header>
     <% end %>
     <% if notice %>
-      <div data-controller="notification" data-notification-delay-value="2000" class="transition transform duration-1000 hidden fixed inset-0 flex items-end justify-center px-4 py-6 pointer-events-none sm:p-6 sm:pt-16 sm:items-start sm:justify-end z-50" data-transition-enter-from="opacity-0 translate-x-6" data-transition-enter-to="opacity-100 translate-x-0" data-transition-leave-from="opacity-100 translate-x-0" data-transition-leave-to="opacity-0 translate-x-6">
-        <div class="max-w-sm w-full bg-white shadow-lg rounded-lg pointer-events-auto rounded-lg shadow-xs overflow-hidden p-4">
+      <div data-controller="notification" data-notification-delay-value="5000" class="transition transform duration-1000 hidden fixed inset-0 flex items-end justify-center px-4 py-6 pointer-events-none sm:p-6 sm:pt-16 sm:items-start sm:justify-end z-50" data-transition-enter-from="opacity-0 translate-x-6" data-transition-enter-to="opacity-100 translate-x-0" data-transition-leave-from="opacity-100 translate-x-0" data-transition-leave-to="opacity-0 translate-x-6">
+        <div class="max-w-sm w-full bg-slate-100 shadow-lg rounded-lg pointer-events-auto rounded-lg shadow-xs overflow-hidden p-4">
           <div class="flex items-start">
-            <svg class="h-6 w-6 text-green-400" xmlns="http;//www.w3.org/2000/svg" fill="none" viewBow="0 0 24 24" stroke="currentColor" aria-hidden="true">
+            <svg class="h-6 w-6 text-green-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBow="0 0 24 24" stroke="currentColor" aria-hidden="true">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
             </svg>
             <div class="ml-3 w-0 flex-1 pt-0.5">
@@ -59,6 +59,5 @@
     <main>
       <%= yield %>
     </main>
-
   </body>
 </html>
