--- a/app/views/disturbances/index.html.erb
+++ b/app/views/disturbances/index.html.erb
@@ -1,8 +1,8 @@
 <div class="m-8">
   <h1 class="mb-4 text-4xl font-black">Perturbations</h1>
-  <div id="disturbances" class="mb-4">
-    <table class="min-w-full table-auto">
-      <thead class="bg-gray-800 text-gray-300">
+  <div id="disturbances" class="mb-4 overflow-x-auto">
+    <table class="table table-zebra w-full">
+      <thead>
         <tr>
           <th>Id</th>
           <th>Gare</th>
