--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,11 +1,11 @@
 <div class="navbar bg-base-300">
   <div class="flex-1">
-    <a class="btn btn-ghost normal-case text-xl">Disturbances</a>
+    <%= link_to "Disturbances", root_path, class: "text-primary normal-case text-xl" %>
   </div>
   <div class="flex-none">
     <ul class="menu menu-horizontal p-0">
-      <li><%= link_to "Perturbations", root_path %></li>
       <% if current_user.admin %>
+        <li><%= link_to "Perturbations", root_path %></li>
         <li><%= link_to "Sources", sources_path %></li>
         <li><%= link_to "Utilisateurs", users_path %></li>
       <% end %>
