--- a/app/views/partials/_notification.html.erb
+++ b/app/views/partials/_notification.html.erb
@@ -1,4 +1,4 @@
-<% if notice %>
+<% if notice || alert %>
   <div data-controller="notification" data-notification-delay-value="5000" class="transition transform duration-1000 hidden fixed inset-0 flex items-end justify-center px-4 py-6 pointer-events-none sm:p-6 sm:pt-16 sm:items-start sm:justify-end z-50" data-transition-enter-from="opacity-0 translate-x-6" data-transition-enter-to="opacity-100 translate-x-0" data-transition-leave-from="opacity-100 translate-x-0" data-transition-leave-to="opacity-0 translate-x-6">
     <div class="max-w-sm w-full bg-slate-100 shadow-lg rounded-lg pointer-events-auto rounded-lg shadow-xs overflow-hidden p-4">
       <div class="flex items-start">
@@ -6,8 +6,7 @@
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
         </svg>
         <div class="ml-3 w-0 flex-1 pt-0.5">
-          <p class="text-sm font-medium text-gray-900"><%= notice %></p>
-          <p class="mt-1 text-sm text-gray-500">Bonjour <%= current_user.email %></p>
+          <p class="text-sm font-medium text-gray-900"><%= notice || alert %></p>
         </div>
         <div class="ml-4 flex-shrink-0 flex">
           <button data-action="notification#hide" class="bg-white rounded-md inline-flex text-gray-400 hover:text-gray-(àà focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-500">
