--- a/app/views/sources/_form.html.erb
+++ b/app/views/sources/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: source, class: "contents") do |form| %>
   <% if source.errors.any? %>
     <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
-      <h2><%= pluralize(source.errors.count, "error") %> prohibited this source from being saved:</h2>
+      <h2><%= pluralize(source.errors.count, "erreur") %> empêche(nt) cette source d'être enregistrée !</h2>
 
       <ul>
         <% source.errors.each do |error| %>
