--- a/app/views/disturbances/_disturbance.html.erb
+++ b/app/views/disturbances/_disturbance.html.erb
@@ -1,10 +1,10 @@
-<tr>
+<tr class="hover">
   <div id="<%= dom_id disturbance %>">
-    <td>
+    <th>
       <p>
         <%= disturbance.id %>
       </p>
-    </td>
+    </th>
 
     <td>
       <p>
