--- a/app/views/disturbances/index.html.erb
+++ b/app/views/disturbances/index.html.erb
@@ -1,5 +1,7 @@
-<div class="m-8">
-  <h1 class="mb-4 text-4xl font-black">Perturbations</h1>
+<div class="w-full">
+  <div class="flex justify-between items-center">
+    <h1 class="font-bold text-4xl mt-1 mb-4">Perturbations</h1>
+  </div>
   <div id="disturbances" class="mb-4 overflow-x-auto">
     <table class="table table-zebra w-full">
       <thead>
@@ -8,11 +10,11 @@
           <th>Gare</th>
           <th>Train</th>
           <th><span>Destination</span>/<span>Provenance</th>
-          <th><span>Départ</span>/<span>Arrivée</span> prévu.e</th>
-          <th><span>Départ</span>/<span>Arrivée</span> réel.le</th>
+          <th>Prévu</th>
+          <th>Réel</th>
           <th>Voie</th>
+          <th>Perturbation</th>
           <th>Raison</th>
-          <th>Information</th>
           <th>Enregistrée</th>
           <th colspan=1></th>
         </tr>
