--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
       <%= render partial: "partials/navbar" %>
     <% end %>
     <%= render partial: "partials/notification" %>
-    <main>
+    <main class="container mx-auto">
       <%= yield %>
     </main>
   </body>
