--- a/app/views/disturbances/_form.html.erb
+++ b/app/views/disturbances/_form.html.erb
@@ -82,6 +82,6 @@
   </div>
 
   <div class="inline">
-    <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
+    <%= form.submit "Enregistrer cette disturbance", class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
   </div>
 <% end %>
