--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,8 +1,8 @@
-<div class="navbar bg-base-300">
-  <div class="flex-1">
+<div class="navbar bg-base-300 sm:px-0 lg:px-20">
+  <div class="navbar-start">
     <%= link_to "Disturbances", root_path, class: "text-primary normal-case text-xl" %>
   </div>
-  <div class="flex-none">
+  <div class="navbar-end flex-none">
     <ul class="menu menu-horizontal p-0">
       <% if current_user.admin %>
         <li><%= link_to "Perturbations", root_path %></li>
