ne pas garder que les retards de moins de 10 min

--- a/app/views/disturbances/_disturbance.html.erb
+++ b/app/views/disturbances/_disturbance.html.erb
@@ -58,7 +58,7 @@
 
       <td>
         <p>
-          <%= disturbance.voie %>
+          <%= disturbance.voie.gsub('non disponible', 'ND') %>
         </p>
       </td>
 
