voie non dispo devient ND

--- a/app/views/disturbances/_disturbance.html.erb
+++ b/app/views/disturbances/_disturbance.html.erb
@@ -58,7 +58,7 @@
 
       <td>
         <p>
-          <%= disturbance.voie.gsub('non disponible', 'ND') %>
+          <%= disturbance.voie %>
         </p>
       </td>
 
