--- a/app/views/sources/_form.html.erb
+++ b/app/views/sources/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="my-5">
     <%= form.label :sens %>
-    <%= form.text_field :sens, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.select :sens, ['Départ', 'Arrivée'], class: "block shadow" %>
   </div>
 
   <div class="my-5">
