--- a/app/views/disturbances/index.html.erb
+++ b/app/views/disturbances/index.html.erb
@@ -1,8 +1,41 @@
 <div class="w-full">
+
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl mt-1 mb-4">Perturbations</h1>
   </div>
-  <div id="disturbances" class="mb-4 overflow-x-auto">
+
+  <%= form_tag disturbances_path, method: :get do %>
+    <div class="flex">
+      <div class="mr-4">
+        <%= label_tag :search, "Origine/Provenance/Destination", class: "label" %>
+        <%= text_field_tag :search,
+                            params[:search],
+                            class: "input input-bordered w-full max-w-xs",
+                            placeholder: "Entrez un mot à rechercher" %>
+      </div>
+
+      <div class="mr-4">
+        <%= label_tag :information, "Information", class: "label" %>
+        <%= select_tag :information, 
+                        options_for_select(@informations, params[:information]), 
+                        include_blank: true,
+                        class: 'select select-bordered', 
+                        onchange: 'this.form.submit()' %>
+      </div>
+
+      <% if defined?(states) %>
+        <div class="control select">
+          <%= select_tag :state, 
+                          options_for_select(states, params[:state]), 
+                          include_blank: true,
+                          onchange: 'this.form.submit()' %>
+        </div>
+      <% end %>
+      <button class="button is-info mt-8">Rechercher</button>
+    </div>
+  <% end %>
+
+  <div id="disturbances" class="my-4 overflow-x-auto">
     <table class="table table-zebra w-full">
       <thead>
         <tr>
@@ -34,8 +67,8 @@
     <%= link_to 'm.ter.sncf.com',
                 'https://m.ter.sncf.com/grand-est/se-deplacer/prochains-departs/strasbourg-87212027',
                 target: '_blank' %>
-
   </p>
+
 </div>
 
 <script type="text/javascript">
