--- a/app/views/disturbances/_disturbance.html.erb
+++ b/app/views/disturbances/_disturbance.html.erb
@@ -1,6 +1,6 @@
 <tr class="hover">
   <div id="<%= dom_id disturbance %>">
-    <th>
+    <th class="font-normal">
       <p>
         <%= disturbance.id %>
       </p>
