--- a/app/views/sources/_form.html.erb
+++ b/app/views/sources/_form.html.erb
@@ -16,9 +16,9 @@
     <%= form.text_field :gare, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
-  <div class="my-5">
+  <div class="my-5 form-control">
     <%= form.label :sens %>
-    <%= form.select :sens, ['Départ', 'Arrivée'], class: "block shadow" %>
+    <%= form.select :sens, options_for_select(['Départ', 'Arrivée'], source.sens), {}, {class: "select select-bordered w-full max-w-xs"} %>
   </div>
 
   <div class="my-5">
