--- a/app/views/sources/_form.html.erb
+++ b/app/views/sources/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="my-5 form-control">
     <%= form.label :sens %>
-    <%= form.select :sens, options_for_select(['Départ', 'Arrivée'], source.sens), {}, {class: "select select-bordered w-full max-w-xs"} %>
+    <%= form.select :sens, options_for_select(['Départ', 'Arrivée'], source.sens), {}, {class: "block select select-bordered w-full max-w-xs"} %>
   </div>
 
   <div class="my-5">
