--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,10 @@
-<div class="w-full">
+<div class="mx-auto md:w-2/3 mt-8">
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">Utilisateurs</h1>
-    <%= link_to 'Nouvel utilisateur', new_user_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+    <%= link_to 'Nouvel utilisateur', new_user_path, class: "btn btn-xs btn-outline btn-primary" %>
   </div>
 
-  <div id="users" class="min-w-full">
+  <div id="users">
     <%= render @users %>
   </div>
 </div>
