--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -32,4 +32,18 @@
   th span:first-child{
     @apply font-black not-italic
   }
+
+  /* //// PAGINATION //// */
+
+
+
+  /* //PAGINATION */
+}
+
+.prev, .next, .page, .last, .first{
+  @apply ml-2 rounded-lg py-1 px-2 bg-gray-100 inline-block font-medium hover:bg-sky-400
+}
+
+.current{
+  @apply font-black
 }
