--- a/app/views/disturbances/index.html.erb
+++ b/app/views/disturbances/index.html.erb
@@ -5,14 +5,14 @@
   </div>
 
   <%= form_tag disturbances_path, method: :get do %>
-    <div class="flex">
+    <div class="flex flex-wrap xl:flex-nowrap">
 
       <div class="mr-4">
         <%= label_tag :gare, "Gare", class: "label" %>
         <%= select_tag :gare,
                         options_for_select(@gares, params[:gare]), 
                         include_blank: true,
-                        class: 'select select-bordered', 
+                        class: 'select select-sm select-bordered w-full max-w-xs', 
                         onchange: 'this.form.submit()' %>
       </div>
 
@@ -21,7 +21,7 @@
         <%= select_tag :train,
                         options_for_select(@trains, params[:train]), 
                         include_blank: true,
-                        class: 'select select-bordered', 
+                        class: 'select select-sm select-bordered w-full max-w-xs',
                         onchange: 'this.form.submit()' %>
       </div>
 
@@ -30,7 +30,7 @@
         <%= select_tag :perturbation, 
                         options_for_select(@perturbations, params[:perturbation]), 
                         include_blank: true,
-                        class: 'select select-bordered', 
+                        class: 'select  select-sm select-bordered w-full max-w-xs', 
                         onchange: 'this.form.submit()' %>
       </div>
 
@@ -39,7 +39,7 @@
         <%= select_tag :information, 
                         options_for_select(@informations, params[:information]), 
                         include_blank: true,
-                        class: 'select select-bordered', 
+                        class: 'select select-sm select-bordered w-full max-w-xs', 
                         onchange: 'this.form.submit()' %>
       </div>
 
@@ -48,7 +48,7 @@
         <%= text_field_tag :du,
                             params[:du],
                             type: "datetime-local",
-                            class: 'input input-bordered', 
+                            class: 'input input-sm input-bordered w-full max-w-xs', 
                             onchange: 'this.form.submit()' %>
       </div>
 
@@ -57,7 +57,7 @@
         <%= text_field_tag :au,
                             params[:au],
                             type: "datetime-local",
-                            class: 'input input-bordered', 
+                            class: 'input input-sm input-bordered w-full max-w-xs', 
                             onchange: 'this.form.submit()' %>
       </div>
     </div>
@@ -70,7 +70,7 @@
           <th>Id</th>
           <th>Gare</th>
           <th>Train</th>
-          <th><span>Destination</span>/<span>Provenance</th>
+          <th>Destination/Provenance</th>
           <th>Prévu</th>
           <th>Réel</th>
           <th>Voie</th>
