--- a/app/views/disturbances/index.html.erb
+++ b/app/views/disturbances/index.html.erb
@@ -95,6 +95,8 @@
   <p class="mt-4">
     <%= link_to 'Export XLS', url_for(params.permit!.merge(format: :xls)) %>
     |
+    <%= link_to 'Export XLS(+informations.json)', url_for(params.permit!.merge(format: :xls, with_payload: true)) %>
+    |
     Source :
     <%= link_to 'm.ter.sncf.com',
                 'https://m.ter.sncf.com/grand-est/se-deplacer/prochains-departs/strasbourg-87212027',
