status pages path

--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -6,7 +6,7 @@
       <% if user_signed_in? %>
         <li><%= link_to "Perturbations", root_path %></li>
       <% end %>
-      <li><%= link_to "Status", pages_status_path %></li>
+      <li><%= link_to "Status", status_path %></li>
       <div class="dropdown dropdown-end">
         <label tabindex="0" class="btn btn-ghost btn-circle avatar">
           <div class="w-8 rounded-full">
