--- a/app/views/pages/status.html.erb
+++ b/app/views/pages/status.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <% @sources.each do |source| %>
-    <% if disturbance = source.disturbances.where("DATE(disturbances.created_at) = ?", Date.today).last %>
+    <% if disturbance = source.disturbances.where("DATE(disturbances.created_at) = ?", Date.today).first %>
       <div tabindex="0" class="collapse collapse-arrow border border-base-300 rounded-box">
         <div class="collapse-title text-xl font-medium">
             <span style="<%= disturbance.perturbation_style%>">
